--- a/Problema/assets/jade/index.jade
+++ b/Problema/assets/jade/index.jade
@@ -11,7 +11,7 @@ html(lang='en')
       .container
         .navbar-header
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-            span.sr-only Toggle navigation
+            span.sr-only Toggle navigation 
             span.icon-bar
             span.icon-bar
             span.icon-bar
@@ -19,15 +19,15 @@ html(lang='en')
         .navbar-collapse.collapse
           ul.nav.navbar-nav.nav-ul.navbar-right
             li
-              a(href='#servicio') SERVICES
+              a.btn-nav(href='#servicio') SERVICES
             li
-              a(href='#portfolio') PORTFOLIO
+              a.btn-nav(href='#portfolio') PORTFOLIO
             li
-              a(href='#about') ABOUT
+              a.btn-nav(href='#about') ABOUT
             li
-              a(href="#team") TEAM
+              a.btn-nav(href="#team") TEAM
             li
-              a(href="#contact") CONTACT
+              a.btn-nav(href="#contact") CONTACT
     //FIN HEADER
     main.hero
       .container.pd-50
