--- a/Problema/assets/sass/page/_home.scss
+++ b/Problema/assets/sass/page/_home.scss
@@ -21,10 +21,6 @@
 			font-family: $font-montserrat;
 			font-weight: 700;
 		}
-		h1:hover{
-
-		}
-		
 	}
 }
 .more{
@@ -32,7 +28,7 @@
 	background: $color-yellow;
 	width: 200px;
 	height: 50px;
-	font-size: 1.5rem;
+	font-size: 1.7rem;
 	font-family: $font-montserrat;
 	padding-top: 10px;
 	font-weight: 700;
@@ -48,9 +44,7 @@
 		}
 	}
 	h5{
-		font-weight: 700;
-		font-family: $font-montserrat;
-		font-size: 2rem;
+		@include title-h5;
 	}
 	p{
 		font-family: $font-roboto;
@@ -64,9 +58,7 @@
 		.text-fortfolio{
 			background: white;
 			h5{
-				font-weight: 700;
-				font-family: $font-montserrat;
-				font-size: 2rem;
+				@include title-h5;
 			}
 			p{
 				padding-bottom: 25px;
@@ -91,11 +83,7 @@
 .text-about{
 	li.contenido-li:nth-child(2n+1){
 		float: left;
-		width: 60%;
-		display: flex;
-		justify-content:space-between;
-		flex-direction:row-reverse;
-		padding-bottom: 50px;
+		@include centrado;
 		.img-circle,.img-circle-2{
 			border: 6px solid #f1f1f1;
 		}
@@ -104,8 +92,7 @@
 			text-align: right;
 			padding-left: 100px;
 			h5{
-				font-weight: 700;
-				font-size: 2rem;
+				@include title-h5;
 			}
 			p{
 				font-style: normal;
@@ -128,8 +115,7 @@
 		.img-text-about{
 			width: calc(100% - 250px);
 			h5{
-				font-size: 2rem;
-				font-family: $font-montserrat;
+				@include title-h5;
 			}
 			p{
 				font-style: normal;
@@ -157,12 +143,10 @@
 		text-align: center;
 	}
 }
-section#team{
+#team{
 	background: #f7f7f7;
 	h5{
-		font-size: 2rem;
-		font-weight: 700;
-		font-family: $font-montserrat;
+		@include title-h5;
 	}
 	p{
 		padding-bottom: 10px;
@@ -206,6 +190,14 @@ section#team{
 ::selection {
     color: white;
     background: $color-yellow;
+}
+.nav-ul {
+	li{
+		.btn-nav:hover{
+			background: white;
+			color: black;
+		}
+	}
 }
 
 
